# FinPolicyKGAgent

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_mimo.py  test_sse.py
config/: settings.py
data/: crawl_state.json
data/crawl_reports/: crawl_20260507_215241.json  crawl_20260507_220156.json
data/output/: batch_report_20260504_150719.json  batch_report_20260504_150741.json  batch_report_20260504_154620.json  batch_report_20260505_212129.json  batch_report_20260509_164550.json  batch_report_20260509_172156.json
data/processed/: 中国人民银行公告〔2026〕第10号_chunked.json  中国人民银行公告〔2026〕第10号_parsed.json  关于印发《深圳市“人工智能+”先进制造业行动计划（2026-2027年）》的通知_chunked.json  关于印发《深圳市“人工智能+”先进制造业行动计划（2026-2027年）》的通知_parsed.json  坪山区人民政府关于印发《深圳市坪山区关于支持实体经济发展的若干措施》_chunked.json  坪山区人民政府关于印发《深圳市坪山区关于支持实体经济发展的若干措施》_parsed.json  坪山区人民政府办公室关于印发《深圳市坪山区促进社区集体经济产业转型发展实施细则》_chunked.json  坪山区人民政府办公室关于印发《深圳市坪山区促进社区集体经济产业转型发展实施细则》_parsed.json  坪山区人民政府办公室关于印发《深圳市坪山区数字经济高质量发展资金支持措施》_chunked.json  坪山区人民政府办公室关于印发《深圳市坪山区数字经济高质量发展资金支持措施》_parsed.json  坪山区人民政府办公室关于印发《深圳市坪山区经济发展专项资金管理办法》_chunked.json  坪山区人民政府办公室关于印发《深圳市坪山区经济发展专项资金管理办法》_parsed.json  (+8 more)
docs/: kgpqam_context_fix_20260517.md  pipeline_performance_optimization.md
output/: advise_result.json
reports/: daily_update_20260509.md  eval_report_20260426.html  run_report_20260503.html
scripts/: backfill_paragraph_location.py  debug_docling.py  extract_quickstart.py  quickstart_text.txt  run_batch.py  run_e2e_test.py  test_decision_support.py  test_neo4j_connection.py
src/api/: main.py  (+2 more)
(+195 files in other folders)
