[project]
name = "FinPolicyKG"
version = "0.1.0"
description = "实时更新的金融政策知识图谱智能体"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FinPolicyKG Team"}
]
dependencies = [
    "curl_cffi>=0.15.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
